# specguard

./: .docguard.json  .docguardignore  .gitignore  .specguard.json  AGENTS.md  CHANGELOG.md  DRIFT-LOG.md  README.md  ROADMAP.md  SECURITY.md  action.yml  package.json  pyproject.toml
.github/scripts/: patch-catalog.py
.github/workflows/: ci.yml  release.yml  spec-kit-extension.yml  sync-speckit-catalog.yml
.specify/memory/: constitution.md
cli/: docguard.mjs  shared-ignore.mjs  shared.mjs  specguard.mjs
cli/commands/: agents.mjs  audit.mjs  ci.mjs  diagnose.mjs  diff.mjs  fix.mjs  generate.mjs  guard.mjs  hooks.mjs  init.mjs  score.mjs  watch.mjs
cli/scanners/: speckit.mjs
cli/validators/: architecture.mjs  docs-coverage.mjs  docs-diff.mjs  environment.mjs  freshness.mjs  metadata-sync.mjs  metrics-consistency.mjs  security.mjs  test-spec.mjs  (+2 more)
commands/: docguard.fix.md  docguard.guard.md  docguard.review.md  docguard.score.md
docguard_cli/: __init__.py  wrapper.py
docs/: ai-integration.md  commands.md  configuration.md  faq.md  installation.md  profiles.md  quickstart.md
docs-canonical/: ARCHITECTURE.md  DATA-MODEL.md  ENVIRONMENT.md  SECURITY.md  TEST-SPEC.md
examples/: README.md
templates/: ADR.md.template  AGENTS.md.template  ARCHITECTURE.md.template  CURRENT-STATE.md.template  DATA-MODEL.md.template  DEPLOYMENT.md.template  KNOWN-GOTCHAS.md.template  REQUIREMENTS.md.template  RUNBOOKS.md.template  TROUBLESHOOTING.md.template  VENDOR-BUGS.md.template
tests/: commands.test.mjs
vscode-extension/: README.md  extension.js  package.json
(+46 files in other folders)
