[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docguard-cli"
version = "0.9.8"
description = "The enforcement tool for Canonical-Driven Development (CDD). Audit, generate, and guard your project documentation. Zero dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Ricardo Accioly", email = "raccioly@gmail.com" }
]
keywords = [
    "documentation", "cdd", "spec-driven", "spec-kit", "quality",
    "validation", "architecture", "canonical", "guard", "audit"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/raccioly/docguard"
Documentation = "https://github.com/raccioly/docguard#readme"
Repository = "https://github.com/raccioly/docguard"
Issues = "https://github.com/raccioly/docguard/issues"

[project.scripts]
docguard = "docguard_cli.wrapper:main"

[tool.hatch.build.targets.wheel]
packages = ["docguard_cli"]
